// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should re-render at onMeasure call at VirtualListItem 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 400,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 100,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-0"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with 1 rows. 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 100,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-0"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with 30 rows. 1`] = `
<div
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    style={
      Object {
        "height": 3000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-0"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 100,
        }
      }
    >
      2
    </span>
    <span
      className="row-2"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 200,
        }
      }
    >
      3
    </span>
    <span
      className="row-3"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 300,
        }
      }
    >
      4
    </span>
    <span
      className="row-4"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 400,
        }
      }
    >
      5
    </span>
    <span
      className="row-5"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 500,
        }
      }
    >
      6
    </span>
    <span
      className="row-6"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 600,
        }
      }
    >
      7
    </span>
  </div>
</div>
`;

exports[`should render with height as px 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 400,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 100,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-0"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with reversed 30 rows. 1`] = `
<div>
  <div>
    <span
      className="row-23"
      style={
        Object {
          "bottom": 2300,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      24
    </span>
    <span
      className="row-24"
      style={
        Object {
          "bottom": 2400,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      25
    </span>
    <span
      className="row-25"
      style={
        Object {
          "bottom": 2500,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      26
    </span>
    <span
      className="row-26"
      style={
        Object {
          "bottom": 2600,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      27
    </span>
    <span
      className="row-27"
      style={
        Object {
          "bottom": 2700,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      28
    </span>
    <span
      className="row-28"
      style={
        Object {
          "bottom": 2800,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      29
    </span>
    <span
      className="row-29"
      style={
        Object {
          "bottom": 2900,
          "left": 0,
          "minHeight": 100,
          "minWidth": 100,
          "position": "absolute",
        }
      }
    >
      30
    </span>
  </div>
</div>
`;
